cpu-profiling/envoy/resources/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '127.0.0.1'
    port:
      name: http
      number: 80
      protocol: HTTP
